feat(compression): wip compressing file using image picker to get the uri

--- a/example/app.json
+++ b/example/app.json
@@ -8,29 +8,22 @@
     }
   ],
   "resources": {
-    "android": [
-      "dist/res",
-      "dist/main.android.jsbundle"
-    ],
-    "ios": [
-      "dist/assets",
-      "dist/main.ios.jsbundle"
-    ],
-    "macos": [
-      "dist/assets",
-      "dist/main.macos.jsbundle"
-    ],
-    "visionos": [
-      "dist/assets",
-      "dist/main.visionos.jsbundle"
-    ],
-    "windows": [
-      "dist/assets",
-      "dist/main.windows.bundle"
-    ]
+    "android": ["dist/res", "dist/main.android.jsbundle"],
+    "ios": ["dist/assets", "dist/main.ios.jsbundle"],
+    "macos": ["dist/assets", "dist/main.macos.jsbundle"],
+    "visionos": ["dist/assets", "dist/main.visionos.jsbundle"],
+    "windows": ["dist/assets", "dist/main.windows.bundle"]
   },
   "android": {
-    "package": "lz4.example"
+    "package": "lz4.example",
+    "permissions": [
+      {
+        "android:name": "android.permission.WRITE_EXTERNAL_STORAGE"
+      },
+      {
+        "android:name": "android.permission.READ_EXTERNAL_STORAGE"
+      }
+    ]
   },
   "ios": {
     "bundleIdentifier": "lz4.example"
