--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-document-picker": "^9.3.1",
     "react-native-image-picker": "^7.1.2"
   },
   "devDependencies": {
